# discord-rm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  discord-rm.kdev4
include/: argparse.hpp  arguments.hpp  config.hpp  helpers.hpp  json.hpp  remover.hpp
src/: .main.cpp.kate-swp  arguments.cpp  config.cpp  helpers.cpp  main.cpp  remover.cpp
